--- a/wp-content/themes/thegem-child/frontend.scss
+++ b/wp-content/themes/thegem-child/frontend.scss
@@ -709,3 +709,18 @@ body .woocommerce .woocommerce-cart-form .actions .submit-buttons .checkout-butt
         color:#ffffff !important;
     }
 }
+.directory-store{
+    padding-bottom:100px;
+    table{
+        @extend .font;
+    }
+    table.dataTable.no-footer{
+        border-bottom: unset !important;
+    }
+    .dataTables_wrapper .dataTables_paginate .paginate_button.current, .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover{
+        border:unset !important;
+    }
+    .dataTables_wrapper .dataTables_filter input{
+        padding:5px;
+    }
+}
