--- a/wp-content/themes/thegem-child/style.css
+++ b/wp-content/themes/thegem-child/style.css
@@ -241,9 +241,45 @@ body[data-aos-duration="7000"] [data-aos],
   text-align: center;
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (min-width: 801px) and (max-width: 1024px) {
   .h-section1 .container .row .product-container .product-overlay {
-    width: 95%;
+    width: 88%;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .h-section1 .container .row .product-container .product-overlay {
+    width: 84%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .h-section1 .container .row .product-container .product-overlay {
+    width: 84%;
+  }
+}
+
+@media only screen and (max-width: 414px) {
+  .h-section1 .container .row .product-container .product-overlay {
+    width: 90%;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  .h-section1 .container .row .product-container .product-overlay {
+    width: 89%;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  .h-section1 .container .row .product-container .product-overlay {
+    width: 88%;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .h-section1 .container .row .product-container .product-overlay {
+    width: 87%;
   }
 }
 
